[workspace]

[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Solving Project Euler with Rust lang."
keywords = ["algebra", "algorithms", "computation", "mathematics", "numerics"]
license = "MIT"
name = "ProjectEulerRust"
readme = "README.md"
repository = "https://github.com/gifnksm/ProjectEulerRust"
version = "0.0.1"
edition = "2018"

[lib]
name = "common"
path = "src/common.rs"

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
generic-matrix = "0.1.0"
getopts = "0.2.21"
glob = "0.3.0"
itertools = "0.10.0"
num-bigint = { version = "0.4.0", default-features = false }
num-integer = "0.1.44"
num-iter = "0.1.42"
num-rational = { version = "0.4.0", default-features = false }
num-traits = "0.2.14"
polynomial = "0.1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
term = "0.7.0"
topological-sort = "0.1.0"
union-find = "0.3.2"
derive-try-from-primitive = "1.0.0"
pretty_env_logger = "0.4.0"
attohttpc = "0.17.0"

[dependencies.cont_frac]
path = "./pkg/cont_frac"

[dependencies.integer]
path = "./pkg/integer"
features = ["bigint"]

[dependencies.iter]
path = "./pkg/iter"

[dependencies.playing_card]
path = "./pkg/playing_card"

[dependencies.prime]
path = "./pkg/prime"

[dependencies.seq]
path = "./pkg/seq"

[dev-dependencies]
rand = "0.8.3"

[features]
default = []
unstable = ["prime/unstable", "iter/unstable"]
