[workspace]

[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Solving Project Euler with Rust lang."
keywords = ["algebra", "algorithms", "computation", "mathematics", "numerics"]
license = "MIT"
name = "ProjectEulerRust"
readme = "README.md"
repository = "https://github.com/gifnksm/ProjectEulerRust"
version = "0.0.1"
edition = "2018"
default-run = "euler"

[lib]
name = "common"
path = "src/common.rs"

[dependencies]
generic-matrix = "0.2.2"
getopts = "0.2.21"
glob = "0.3.1"
itertools = "0.11.0"
num-bigint = { version = "0.4.4", default-features = false }
num-integer = "0.1.45"
num-iter = "0.1.43"
num-rational = { version = "0.4.1", default-features = false }
num-traits = "0.2.16"
polynomial = "0.2.5"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
term = "0.7.0"
topological-sort = "0.2.2"
union-find = "0.4.1"
derive-try-from-primitive = "1.0.0"
pretty_env_logger = "0.5.0"
attohttpc = "0.26.1"
thiserror = "1.0.47"

[dependencies.cont_frac]
path = "./pkg/cont_frac"

[dependencies.integer]
path = "./pkg/integer"
features = ["bigint"]

[dependencies.iter]
path = "./pkg/iter"

[dependencies.playing_card]
path = "./pkg/playing_card"

[dependencies.prime]
path = "./pkg/prime"

[dependencies.seq]
path = "./pkg/seq"

[dev-dependencies]
rand = "0.8.5"
