[package]
name = "integer"
version = "0.0.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
workspace = "../../"
edition = "2018"

[dependencies]
num-integer = "0.1.45"
num-traits = "0.2.17"

[dependencies.num-bigint]
version = "0.4.4"
optional = true
default-features = false
features = ["std"]

[features]
bigint = ["num-bigint"]
serde = ["num-bigint/serde"]

default = []
