[package]
name = "integer"
version = "0.0.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
workspace = "../../"
edition = "2018"

[dependencies]
num-integer = "0.1.46"
num-traits = "0.2.19"

[dependencies.num-bigint]
version = "0.4.5"
optional = true
default-features = false
features = ["std"]

[features]
bigint = ["num-bigint"]
serde = ["num-bigint/serde"]

default = []
